--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/adapter-neon": "^6.6.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/typography": "^0.5.16",
